--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="one-half column">
-                <img src="img/cryptomonedas.png">
+                <img src="img/pay.webp">
             </div>
             <div class="one-half column">
                 <form id="formulario">
