--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 
+    <h1>Cotizador Criptomonedas</h1>
+
     <div class="container">
         <div class="row">
             <div class="one-half column">
